[package]
name = "app_units"
version = "0.2.4"
authors = ["The Servo Project Developers"]
description = "Servo app units type (Au)"
documentation = "http://doc.servo.org/app_units/"
repository = "https://github.com/servo/app_units"
license = "MPL-2.0"

[features]
default = []
plugins = ["serde", "serde_macros"]

[dependencies]
heapsize = ">=0.2.2, <0.4"
serde = {version = ">=0.6, <0.8", optional = true}
serde_macros = {version = ">=0.6, <0.8", optional = true}
rustc-serialize = "0.3"
num-traits = "0.1.32"
