[package]
name = "app_units"
version = "0.2.5"
authors = ["The Servo Project Developers"]
description = "Servo app units type (Au)"
documentation = "http://doc.servo.org/app_units/"
repository = "https://github.com/servo/app_units"
license = "MPL-2.0"

[features]
default = []
plugins = []

[dependencies]
heapsize = ">=0.2.2, <0.4"
num-traits = "0.1.32"
rustc-serialize = "0.3"
serde = ">=0.6, <0.8"
