[package]
name = "app_units"
version = "0.6.0"
authors = ["The Servo Project Developers"]
description = "Servo app units type (Au)"
documentation = "http://doc.servo.org/app_units/"
repository = "https://github.com/servo/app_units"
license = "MPL-2.0"

[dependencies]
num-traits = "0.1.32"
serde = "1.0"
